src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_classes_tests__method_with_invalid_return_type.snap
---
source: src/parser/tests/parse_errors/parse_error_classes_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected DataTypeDefinition but found KeywordAbstract
  ┌─ <internal>:1:30
  │
1 │ CLASS TestClass METHOD foo : ABSTRACT END_METHOD END_CLASS
  │                              ^^^^^^^^ Unexpected token: expected DataTypeDefinition but found KeywordAbstract

error[E007]: Unexpected token: expected Datatype but found ABSTRACT
  ┌─ <internal>:1:30
  │
1 │ CLASS TestClass METHOD foo : ABSTRACT END_METHOD END_CLASS
  │                              ^^^^^^^^ Unexpected token: expected Datatype but found ABSTRACT

error[E007]: Unexpected token: expected Literal but found ABSTRACT
  ┌─ <internal>:1:30
  │
1 │ CLASS TestClass METHOD foo : ABSTRACT END_METHOD END_CLASS
  │                              ^^^^^^^^ Unexpected token: expected Literal but found ABSTRACT

error[E007]: Unexpected token: expected KeywordSemicolon but found 'ABSTRACT'
  ┌─ <internal>:1:30
  │
1 │ CLASS TestClass METHOD foo : ABSTRACT END_METHOD END_CLASS
  │                              ^^^^^^^^ Unexpected token: expected KeywordSemicolon but found 'ABSTRACT'

error[E006]: Missing expected Token [KeywordSemicolon, KeywordColon]
  ┌─ <internal>:1:39
  │
1 │ CLASS TestClass METHOD foo : ABSTRACT END_METHOD END_CLASS
  │                                       ^^^^^^^^^^ Missing expected Token [KeywordSemicolon, KeywordColon]

error[E007]: Unexpected token: expected KeywordSemicolon but found 'END_METHOD'
  ┌─ <internal>:1:39
  │
1 │ CLASS TestClass METHOD foo : ABSTRACT END_METHOD END_CLASS
  │                                       ^^^^^^^^^^ Unexpected token: expected KeywordSemicolon but found 'END_METHOD'
